<resources>
    <string name="app_name">Calculator_App</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="_dot">.</string>
    <string name="_divide">÷</string>
    <string name="_times">×</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_ac">AC</string>
    <string name="_percent">%</string>
    <string name="_backspace">⌫</string>
    <string name="_equals">=</string>
    <string name="settings">settings</string>
    <string name="sci_sin">sin</string>
    <string name="sci_rad">rad</string>
    <string name="sci_deg">deg</string>
    <string name="sci_cos">cos</string>
    <string name="sci_tan">tan</string>
    <string name="sci_inv">inv</string>
    <string name="sci_log">log</string>
    <string name="sci_ln">ln</string>
    <string name="sci_factorial">!</string>
    <string name="sci_pi">π</string>
    <string name="sci_e">e</string>
    <string name="sci_exp">^</string>
    <string name="sci_sqrt">√</string>
    <string name="sci_open_par">(</string>
    <string name="sci_close_par">)</string>
</resources>